Fix misaligned buttons

--- a/client/components/plans/plan/style.scss
+++ b/client/components/plans/plan/style.scss
@@ -162,7 +162,7 @@
 	}
 
 	.plan__plan-details {
-		min-height: 180px;
+		min-height: 209px;
 	}
 
 	.plan-list {
